fix(bcd): remove double border from support history

--- a/client/src/document/ingredients/browser-compatibility-table/index-mobile.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index-mobile.scss
@@ -5,8 +5,9 @@
     display: none;
   }
 
-  .bc-support {
+  td.bc-support {
     display: block;
+    border-left-width: 0;
   }
 
   .bc-feature,
