--- a/client/src/document/ingredients/browser-compatibility-table/index.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index.scss
@@ -75,6 +75,12 @@
         color: var(--text-primary-green);
       }
     }
+
+    .bc-history {
+      td {
+        border-left-width: 0;
+      }
+    }
   }
 
   th {
